<resources>
    <string name="app_name">Facial Recognition</string>
    <string name="sign_up">Inscrever-se</string>
    <string name="login">Acessar</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="sign_in">Registrar</string>
    <string name="confirm_password">Confirme a senha</string>
    <string name="you_connected">Você está Conectado!</string>
    <string name="you_don_t_connected">Você não está Conectado!</string>
    <string name="action_settings">Configurações</string>
    <string name="log_out">Sair</string>
    <string name="home">Inicio</string>
    <string name="next_step">Registro</string>
    <string name="settings">Configurações</string>
    <string name="empty_field">Este campo não pode estar em branco!</string>
    <string name="loading">Carregando...</string>
    <string name="logging_in">Logando</string>
    <string name="failed_login">Falha ao entrar</string>
    <string name="timeout">Tempo esgotado</string>
    <string name="error_network">Verifique sua conexão</string>
    <string name="error_auth">Erro de autenticação</string>
    <string name="invalid_email_psswd">E-mail ou Senha inválido(s)</string>
    <string name="login_successfully">Acesso sucedido</string>
    <string name="recording">Gravando</string>
    <string name="data_saved">Dados salvos com sucesso!</string>
    <string name="login_to_continue">Acesse para Continuar</string>
    <string name="failed_register">Falha ao registrar</string>
    <string name="unique_email">E-mail já utilizado na base de dados!</string>
    <string name="sorry">Desculpe</string>
    <string name="one_picture">Precisamos de uma foto!</string>
    <string name="no_one_face">Não detectamos nenhuma face na foto tirada. Tire Novamente!</string>
    <string name="many_faces">Nós detectamos mais de uma face na foto tirada. Tire Novamente!</string>
    <string name="language">Idioma:</string>
    <string name="theme">Tema:</string>
    <string name="match_passwords">As senhas não correspondem!</string>
    <string name="valid_email">Informe um e-mail válido</string>
    <string name="password_length">A senha precisa conter no mínimo 4 caracteres!</string>
</resources>
