<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="bests.pi.facialrecognition.Resources.Login">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBarRegistration"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="3dp"
        android:theme="@style/ToolBarStyle"
        tools:ignore="UnusedAttribute" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayoutRegistration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">
            <ImageView
                android:id="@+id/imageRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_fsociety"
                tools:ignore="ContentDescription" />
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutEmailRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:theme="@style/EditText">
                <EditText
                    android:id="@+id/editTextEmailRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/hint_email"
                    android:theme="@style/EditText"
                    android:textColor="#FFFFFF"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutPasswordRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText">
                <EditText
                    android:id="@+id/editTextPasswordRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:theme="@style/EditText"
                    android:textColor="#FFFFFF"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutConfirmPasswordRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText">
                <EditText
                    android:id="@+id/editTextConfirmPasswordRegistration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:theme="@style/EditText"
                    android:textColor="#FFFFFF"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/buttonCamera"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:background="@drawable/ic_camera"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@android:color/darker_gray"
                tools:ignore="RtlHardcoded" />
            <Button
                android:id="@+id/buttonRegistration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_shape"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:textSize="17sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
