<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:theme="@style/AppTheme"
    tools:context="bests.pi.facialrecognition.Resources.Login">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBarLogin"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorAccent"
        android:elevation="3dp"
        app:theme="@style/ToolBarStyle"
        tools:ignore="UnusedAttribute" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:gravity="center"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linearLayoutLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_fsociety"
                    tools:ignore="ContentDescription" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:theme="@style/EditText">
                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:hint="@string/hint_email"
                        android:theme="@style/EditText"
                        android:textColor="@color/colorAccent"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditText">
                    <EditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:theme="@style/EditText"
                        android:textColor="@color/colorAccent"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>
                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
